--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:h2:mem:usuario_data  
+spring.datasource.username=a  
+spring.datasource.password=
+#enabling the H2 console
+spring.h2.console.enabled=true  
